--- a/internal/web/html/templates/contacts/page_details.html
+++ b/internal/web/html/templates/contacts/page_details.html
@@ -30,7 +30,13 @@
   </div>
 </header>
 
-<div class="container-fluid">
+<div class="container">
+  <div class="d-flex flex-row justify-content-between pt-3 align-items-baseline">
+    <h5><i class="fas fa-mobile-screen-button pe-2"></i> Phone</h5>
+    <button type="button" class="btn btn-outline-secondary btn-floating" data-mdb-ripple-init data-mdb-ripple-color="dark">
+      <i class="fas fa-plus"></i>
+      </button>
+  </div>
 </div>
 
 
