Add a container to the contact details header

--- a/internal/web/html/templates/contacts/page_details.html
+++ b/internal/web/html/templates/contacts/page_details.html
@@ -7,6 +7,7 @@
   </nav>
 
   <div class="p-3" style="background-color: {{.Contact.Color}};">
+    <div class="container">
     <div class="p-4 text-center">
       <i class="fas fa-user fa-7x text-black"></i>
     </div>
@@ -26,6 +27,7 @@
         data-mdb-ripple-init 
         data-mdb-ripple-color="dark"
       ><i class="fas fa-pen"></i></button>
+    </div>
     </div>
   </div>
 </header>
