Add the contact deletion

--- a/internal/web/html/templates/contacts/page_details.html
+++ b/internal/web/html/templates/contacts/page_details.html
@@ -1,33 +1,46 @@
 <header>
   <nav class="navbar sticky-top bg-primary">
-    <div class="container-fluid justify-content-start">
-      <a class="navbar-nav" href="/web/contacts" hx-boost="true"><i class="fas fa-arrow-left fa-lg"></i></a>
-      <a class="navbar-brand ps-4">Contacts</a>
+    <div class="container-fluid justify-content-between">
+      <div class="d-flex flex-row align-items-center">
+        <a class="navbar-nav" href="/web/contacts" hx-boost="true"><i class="fas fa-arrow-left fa-lg"></i></a>
+        <a class="navbar-brand ps-4">Contacts</a>
+      </div>
+      <div>
+        <div class="dropdown">
+          <a class="btn btn-white btn-rounded shadow-0" role="button" data-mdb-dropdown-init
+            aria-expanded="false"><i class="fas fa-ellipsis-vertical fa-2x text-muted"></i></a>
+          <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <li><a class="dropdown-item text-danger" hx-delete="/web/contacts/{{.Contact.ID}}" hx-trigger="click">
+              <i class="fas fa-trash me-2"></i>Delete</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
   </nav>
 
   <div class="p-3" style="background-color: {{.Contact.Color}};">
     <div class="container">
-    <div class="p-4 text-center">
-      <i class="fas fa-user fa-7x text-black"></i>
-    </div>
-    <div class="d-flex flex-row align-items-center">
-      {{ $name := .Contact.Name}}
-      <h3 class="text-truncate">{{$name.DisplayName}} </h3> 
-      <button 
-        type="button" 
-        class="btn btn-link" 
-        data-mdb-target="#modal-target"
-        data-mdb-modal-init 
-        data-mdb-toggle="modal" 
-        hx-get="/web/contacts/{{.Contact.ID}}/name" 
-        hx-target="#modal-target"
-        hx-trigger="click" 
-        hx-swap="innerHTML"
-        data-mdb-ripple-init 
-        data-mdb-ripple-color="dark"
-      ><i class="fas fa-pen"></i></button>
-    </div>
+      <div class="p-4 text-center">
+        <i class="fas fa-user fa-7x text-black"></i>
+      </div>
+      <div class="d-flex flex-row align-items-center">
+        {{ $name := .Contact.Name}}
+        <h3 class="text-truncate">{{$name.DisplayName}} </h3> 
+        <button 
+          type="button" 
+          class="btn btn-link" 
+          data-mdb-target="#modal-target"
+          data-mdb-modal-init 
+          data-mdb-toggle="modal" 
+          hx-get="/web/contacts/{{.Contact.ID}}/name" 
+          hx-target="#modal-target"
+          hx-trigger="click" 
+          hx-swap="innerHTML"
+          data-mdb-ripple-init 
+          data-mdb-ripple-color="dark"
+        ><i class="fas fa-pen"></i></button>
+      </div>
     </div>
   </div>
 </header>
@@ -37,14 +50,14 @@
     <h5><i class="fas fa-mobile-screen-button pe-2"></i> Phone</h5>
     <button type="button" class="btn btn-outline-secondary btn-floating" data-mdb-ripple-init data-mdb-ripple-color="dark">
       <i class="fas fa-plus"></i>
-      </button>
+    </button>
   </div>
 </div>
 
 
 <script type="module">
-import {Button, Ripple, initMDB} from "/assets/js/libs/mdb.es.min.js";
+import {Button, Ripple, Dropdown, initMDB} from "/assets/js/libs/mdb.es.min.js";
 
-initMDB({ Button, Ripple});
+initMDB({ Button, Ripple, Dropdown});
 
 </script>
