Add the phone field into the contact

--- a/internal/web/html/templates/contacts/layout.html
+++ b/internal/web/html/templates/contacts/layout.html
@@ -4,7 +4,7 @@
 <body hx-ext="response-targets" hx-target-5*="this">
   <main>
     <!-- Modal -->
-    <div id="modal-target" class="modal modal-blur fade" aria-hidden="false">
+    <div id="modal-target" class="modal modal-blur fade" tabindex="-1" aria-hidden="true">
       <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
         <div class="modal-content"></div>
       </div>
