Move the imports into a new page and create the sidenav

--- a/internal/web/html/templates/pages/contacts/page_list.html
+++ b/internal/web/html/templates/pages/contacts/page_list.html
@@ -1,29 +1,9 @@
 <header>
   <nav class="navbar sticky-top bg-primary">
-    <div class="container-fluid justify-content-between">
+    <div class="container-fluid justify-content-start">
+      {{template "sidenav-btn"}}
       <div class="d-flex flex-row align-items-center">
         <a class="navbar-brand ps-4">Contacts</a>
-      </div>
-      <div>
-        <div class="dropdown">
-          <a class="btn btn-white btn-rounded shadow-0" role="button" data-mdb-dropdown-init
-            aria-expanded="false"><i class="fas fa-ellipsis-vertical fa-2x text-muted"></i></a>
-          <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <li><a 
-              class="dropdown-item" 
-              data-mdb-target="#modal-target"
-              data-mdb-modal-init 
-              data-mdb-toggle="modal" 
-              hx-target="#modal-target"
-              hx-get="/web/contacts/imports" 
-              hx-trigger="click"
-              hx-swap="innerHTML"
-              data-mdb-ripple-init 
-            >
-              <i class="fas fa-arrow-up-from-bracket me-2"></i>Import</a>
-            </li>
-          </ul>
-        </div>
       </div>
     </div>
   </nav>
